[package]
name = "teddy"
version = "2.0.0"
authors = ["jdcoffre <jeandenis.coffre@sonarsource.com>",
            "drautureau <david.rautureau@sonarsource.com>",
            "hgomez <henri.gomez@sonarsource.com"]

[dependencies]
iron            = "0.5.1"
params          = "0.6.0"
time            = "0.1.38"
url             = "^1.4.0"
router          = "0.5.1"
rustc-serialize = "0.3"
hyper           = "0.10"
multipart       = "0.13.3"
